Colab을 통해 생성됨

--- a/submissions/202400730/assignment2/ml-mnist.ipynb
+++ b/submissions/202400730/assignment2/ml-mnist.ipynb
@@ -1126,6 +1126,20 @@
         "\n",
         "print(\"실험을 시작해보세요! 💪\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "learning_rate = 1e-1\n",
+        "learning_rate = 3e-4\n",
+        "nn.Relu() -> nn.Sigmoid(), nn.Tanh()"
+      ],
+      "metadata": {
+        "id": "t0XYie4Qi95C"
+      },
+      "id": "t0XYie4Qi95C",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
